tests/snapshots/statements__variable_init_number_name.snap
---
source: tests/statements.rs
expression: stderr

---
error: Expected identifier, found `5`
      |
    1 | please initialize variable 5 as Integer with the value of 15
      |                            ^

